# wyoming-openwakeword

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.gpu  MANIFEST.in  README.md  docker-compose.yml  docker_run.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
script/: format  lint  package  run  setup  test
tests/: test_openwakeword.py
wyoming_openwakeword/: __init__.py  __main__.py  const.py  handler.py  openwakeword.py  state.py  vad.py
